    encrypted files
  * When using oidc-gen --delete the account config now does not have to be
    loaded. The refresh token can also be revoked if not loaded.
  * Added --reauthenticate option to oidc-gen to easily update the refresh
    token without changing any other metadata
  * En-/Decryption password prompts can be done noninteractive using the
    --pw-cmd option
  * Improved documentation
  * Fixed some memory leaks 
  * Fixed a seg fault when locking an agent that has a public client loaded
  * Fixed other possible seg faults
  * Improved usability of oidc-gen and other enhancements

  [ Gabriel Zachmann ]
  * Fixed the course of a bug that would not utilize the cached AT when an
    application requests an AT with an empty scope value. This fix might have
    also fixed other unknown bugs.
  * Improved the user prompt message for autoload when the application does
    not send an application_hint
  * Improved error handling when refresh token wrong
  * Fix a bug related to the confirm feature: after a request is declined it
    was impossible to get an access token for this configuration without
    reloading the configuration.

  [ Gabriel Zachmann ]
  * Changed the type of the UNIX domain socket used for communciating with
    oidc-agent from SOCK_SEQPACKET to SOCK_STREAM
  * This allows forwarding of the oidc-agent through ssh
  * Added getAccessToken2 to liboidc-agent
  * Access tokens can now be requested by issuer url; the suer can set an
    default account config for each issuer
  * Added the correlating functions to liboidc-agent
  * oidc-token can now also be used with issuer urls

  [ Gabriel Zachmann]
  * Added the elixir public client to the list of public clients

  [ Gabriel Zachmann ]
  * Fixed a segfault if the pubclients.conf file does not exist
  * Fixed segfault if the issuer.config in the oidc-agent directory doesn't
    exist and an AT is requested by issuer.

 -- Marcus Hardt <hardt@kit.edu>  Wed, 10 Apr 2019 13:16:09 +0100