@@ -260,5 +260,6 @@ oidc-agent (3.0.2) UNRELEASED; urgency=medium
   * Fixed a segfault if the pubclients.conf file does not exist
   * Fixed segfault if the issuer.config in the oidc-agent directory doesn't
     exist and an AT is requested by issuer.
+  * Fixed behavior of oidc-gen -p when the passed file does not exist. 
 
- -- Marcus Hardt <hardt@kit.edu>  Wed, 10 Apr 2019 13:16:09 +0100
+ -- Marcus Hardt <hardt@kit.edu>  Tue, 23 Apr 2019 16:06:13 +0100
